--- a/.github/workflows/SyncToGitee.yml
+++ b/.github/workflows/SyncToGitee.yml
@@ -18,5 +18,5 @@ jobs:
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           dst_token:  ${{ secrets.GITEE_TOKEN }}
           force_update: true
-          white_list: "RapidTable"
+          static_list: "RapidTable"
           debug: true
