--- a/.github/workflows/publish_whl.yml
+++ b/.github/workflows/publish_whl.yml
@@ -56,7 +56,7 @@ jobs:
           ZIP_NAME=${RESOURCES_URL##*/}
           DIR_NAME=${ZIP_NAME%.*}
           unzip $ZIP_NAME
-          mv $DIR_NAME/en_ppstructure_mobile_v2_SLANet.onnx rapid_table/models/
+          mv $DIR_NAME/slanet-plus.onnx rapid_table/models/
           python setup.py bdist_wheel ${{ github.event.head_commit.message }}
 
       - name: Publish distribution 📦 to PyPI
