--- a/.github/workflows/publish_whl.yml
+++ b/.github/workflows/publish_whl.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Pull latest code
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.7
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.7'
+          python-version: '3.10'
           architecture: 'x64'
 
       - name: Display Python version
@@ -60,7 +60,7 @@ jobs:
           DIR_NAME=${ZIP_NAME%.*}
           unzip $ZIP_NAME
           mv $DIR_NAME/slanet-plus.onnx rapid_table/models/
-          python setup.py bdist_wheel ${{ github.event.head_commit.message }}
+          python setup.py bdist_wheel ${{ github.ref_name }}
 
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@v1.5.0
