--- a/.github/workflows/publish_whl.yml
+++ b/.github/workflows/publish_whl.yml
@@ -6,7 +6,7 @@ on:
       - v*
 
 env:
-  RESOURCES_URL: https://github.com/RapidAI/RapidStructure/releases/download/v0.0.0/rapid_table_models.zip
+  RESOURCES_URL: https://github.com/RapidAI/RapidTable/releases/download/assets/rapid_table_models.zip
 
 jobs:
   UnitTesting:
@@ -65,5 +65,5 @@ jobs:
       - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
-          password: ${{ secrets.RAPID_STRUCTURE }}
+          password: ${{ secrets.RAPID_TABLE }}
           packages_dir: dist/
