--- a/.github/workflows/publish_whl.yml
+++ b/.github/workflows/publish_whl.yml
@@ -34,8 +34,12 @@ jobs:
 
           pip install -r requirements.txt
           pip install rapidocr_onnxruntime
+          pip install torch
+          pip install torchvision
+          pip install tokenizers
           pip install pytest
           pytest tests/test_table.py
+          pytest tests/test_table_torch.py
 
   GenerateWHL_PushPyPi:
     needs: UnitTesting
