--- a/.github/workflows/publish_whl.yml
+++ b/.github/workflows/publish_whl.yml
@@ -38,8 +38,7 @@ jobs:
           pip install torchvision
           pip install tokenizers
           pip install pytest
-          pytest tests/test_table.py
-          pytest tests/test_table_torch.py
+          pytest tests/test_main.py
 
   GenerateWHL_PushPyPi:
     needs: UnitTesting
