--- a/.github/workflows/publish_whl.yml
+++ b/.github/workflows/publish_whl.yml
@@ -29,7 +29,7 @@ jobs:
           wget $DEFAULT_MODEL -P rapid_table/models
 
           pip install -r requirements.txt
-          pip install rapidocr_onnxruntime
+          pip install rapidocr
           pip install torch
           pip install torchvision
           pip install tokenizers
