chore: update files

--- a/rapid_table/engine_cfg.yaml
+++ b/rapid_table/engine_cfg.yaml
@@ -8,7 +8,7 @@ onnxruntime:
 
     use_cuda: false
     cuda_ep_cfg:
-        device_id: 0
+        gpu_id: 0
         arena_extend_strategy: "kNextPowerOfTwo"
         cudnn_conv_algo_search: "EXHAUSTIVE"
         do_copy_in_default_stream: true
@@ -18,7 +18,7 @@ onnxruntime:
 
     use_cann: false
     cann_ep_cfg:
-        device_id: 0
+        gpu_id: 0
         arena_extend_strategy: "kNextPowerOfTwo"
         npu_mem_limit:  21474836480 # 20 * 1024 * 1024 * 1024
         op_select_impl_mode: "high_performance"
